feat: added logo for login page and favicon for browser title bar

--- a/Web/WhitePage.MyWeb.UI/src/app/pages/pages.signin.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/pages/pages.signin.html
@@ -1,7 +1,9 @@
 
 <div style="height: 100vh; display: flex;">
         <div class="auth-container">
-            <h1 class="auth-title">My Choices</h1>
+            <div class="auth-title">
+                <img src="/assets/img/logo-mychoices.png" alt="My Choices" style="height: 60px"/>
+            </div>
             <div class="container">
                 <form [formGroup]="form" (ngSubmit)="onSubmit()">
                     <div class="form-group row">
