fix: added tab styles

--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
@@ -24,7 +24,7 @@
 
 </table>
 
-<div class="container" style="width:100%">
+<div class="container case-detail-container" style="width:100%">
     <!-- regular tabs -->
     <tabset class="nav nav-tabs" style="width:100%">
         <tab title="Primary Info" class="active" style="width:100%">
