--- a/Web/WhitePage.MyWeb.UI/src/app/layouts/full-layout.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/layouts/full-layout.component.html
@@ -7,11 +7,10 @@
         </li>
 
         <li class="nav-item">
-            <button class="btn btn-link" (click)="onSignout()">
-                Sign Out
-            </button>
+            
         </li>
     </ul>
+    <i class="fa fa-2x fa-power-off sign-out-icon" (click)="onSignout()" tooltip="Sign out" placement="bottom"></i>
 </header>
 <div class="app-body d-flex">
     <div class="sidebar">
