fix: case list table responsive

--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.list.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.list.html
@@ -1,4 +1,4 @@
-<div class="row flex-column">
+<div class="d-flex flex-column"> 
     <ng-table [config]="config"
               (tableChanged)="onChangeTable(config)"
               (moveClicked)="onMoveClick($event)"
