--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.create.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.create.html
@@ -66,16 +66,16 @@
                     </div>
 
                     <div class="form-group">
+                        <label for="PeacemakerId">M.I.</label>
+                        <textarea placeholder="Middle Initials" [formControl]="casePrimaryForm.controls['primaryInfo'].controls['Mi']" [(ngModel)]="caseBook.Case.Mi" class="form-control"></textarea>
+                    </div>
+
+                    <div class="form-group">
                         <label for="PeacemakerId">Father / Husband Name *</label>
                         <input placeholder="Father / Husband Name" [formControl]="casePrimaryForm.controls['primaryInfo'].controls['FatherName']" [(ngModel)]="caseBook.Case.FatherName" class="form-control" />
                         <div>
                             <small *ngIf="casePrimaryForm.controls['primaryInfo'].controls['FatherName'].hasError('required') && casePrimaryForm.controls['primaryInfo'].controls['FatherName'].touched" class="mat-text-warn">Father / Husband Name is required.</small>
                         </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="PeacemakerId">Mi</label>
-                        <textarea placeholder="Mi" [formControl]="casePrimaryForm.controls['primaryInfo'].controls['Mi']" [(ngModel)]="caseBook.Case.Mi" class="form-control"></textarea>
                     </div>
 
                 </div>
@@ -99,8 +99,8 @@
 
                     <div class="form-group">
                         <label for="PeacemakerId">PIN *</label>
-                        <input placeholder="PIN" [formControl]="casePrimaryForm.controls['address'].controls['PIN']" 
-                               class="form-control" [(ngModel)]="caseBook.SelectedAddress.PIN" [min]="6" [max]="6" digits maxlength="6"/>
+                        <input placeholder="PIN" [formControl]="casePrimaryForm.controls['address'].controls['PIN']"
+                               class="form-control" [(ngModel)]="caseBook.SelectedAddress.PIN" [min]="6" [max]="6" digits maxlength="6" />
                         <div>
                             <small *ngIf="casePrimaryForm.controls['address'].controls['PIN'].hasError('required') && casePrimaryForm.controls['address'].controls['PIN'].touched" class="mat-text-warn">PIN is required.</small>
                         </div>
@@ -125,7 +125,7 @@
                         <ng-select [options]="cityOptionsList"
                                    placeholder="Select City"
                                    formControlName="CityId"
-                                   [(ngModel)]="caseBook.SelectedAddress.CityId"                                   
+                                   [(ngModel)]="caseBook.SelectedAddress.CityId"
                                    [allowClear]="true">
                         </ng-select>
                         <div>
@@ -154,8 +154,8 @@
 
                     <div class="form-group">
                         <label for="PeacemakerId">Mobile *</label>
-                        <input placeholder="Mobile" [formControl]="casePrimaryForm.controls['primaryInfo'].controls['MobileNumber']" class="form-control" 
-                               [(ngModel)]="caseBook.Case.MobileNumber" [min]="10" [max]="10" digits maxlength="10"/>
+                        <input placeholder="Mobile" [formControl]="casePrimaryForm.controls['primaryInfo'].controls['MobileNumber']" class="form-control"
+                               [(ngModel)]="caseBook.Case.MobileNumber" [min]="10" [max]="10" digits maxlength="10" />
                         <div>
                             <small *ngIf="casePrimaryForm.controls['primaryInfo'].controls['MobileNumber'].hasError('required') && casePrimaryForm.controls['primaryInfo'].controls['MobileNumber'].touched" class="mat-text-warn">Mobile is required.</small>
                         </div>
